working on plugin registration, and better resource loading

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ contractor (0.1-1) xenial; urgency=medium
 
   * Initial release.
 
- -- Peter <peter@xps13-01>  Wed, 23 May 2018 10:16:48 -0600
+ -- Peter Howe <pnhowe@gmail.com>  Wed, 23 May 2018 10:16:48 -0600
