--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ contractor (0.2-1) xenial; urgency=medium
 
   * Fixes, Tweeks, Minor Improvements
 
- -- Peter <peter@xps13-01>  Mon, 15 Oct 2018 14:27:00 -0600
+ -- Peter Howe <pnhowe@gmail.com>  Mon, 15 Oct 2018 14:27:00 -0600
 
 contractor (0.1-1) xenial; urgency=medium
 
