--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.3.1-1) xenial; urgency=medium
+
+  * Transaction related fixes
+
+ -- Peter <peter@xps13-01>  Tue, 12 Mar 2019 11:59:01 -0600
+
 contractor (0.3-1) xenial; urgency=medium
 
   * Fixes, Tweeks, Improvements
