adding config cache, bug fixes, better json encoding in with jinja

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ contractor (0.3.1-1) xenial; urgency=medium
 
   * Transaction related fixes
 
- -- Peter <peter@xps13-01>  Tue, 12 Mar 2019 11:59:01 -0600
+ -- Peter Howe <pnhowe@gmail.com>  Tue, 12 Mar 2019 11:59:01 -0600
 
 contractor (0.3-1) xenial; urgency=medium
 
