--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+contractor (0.7.0-1) xenial; urgency=medium
+
+  * primary/provisioning_ip to _address
+  * blueprintLoader enhancments
+  * PXE now viewable from the ui
+
+ -- Peter Howe <pnhowe@gmail.com>  Thu, 22 Aug 2019 10:33:43 -0600
+
 contractor (0.6.2-1) xenial; urgency=medium
 
   * config file now /etc/contractor.conf
