--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.8.0-1) xenial; urgency=medium
+
+  * 
+
+ -- Peter Howe <pnhowe@gmail.com>  Fri, 13 Sep 2019 07:37:39 -0600
+
 contractor (0.7.0-1) xenial; urgency=medium
 
   * primary/provisioning_ip to _address
