--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.9.0-1) focal; urgency=medium
+
+  * 
+
+ -- Peter Howe <pnhowe@gmail.com>  Mon, 21 Dec 2020 14:37:51 -0700
+
 contractor (0.8.0-1) bionic; urgency=medium
 
   * Moved to bionic
