--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 contractor (0.9.0-1) focal; urgency=medium
 
-  * 
+  * tscript: goto fixes
+  * tscript: toSubcontractor call fixes
+  * tscript: message function
+  * dns updates and fixes
 
- -- Peter Howe <pnhowe@gmail.com>  Mon, 21 Dec 2020 14:37:51 -0700
+ -- Peter Howe <pnhowe@gmail.com>  Tue, 24 Aug 2021 14:37:51 -0700
 
 contractor (0.8.0-1) bionic; urgency=medium
 
