--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.14.0-1) focal; urgency=medium
+
+  * Cartographer work 
+
+ -- Peter Howe <pnhowe@gmail.com>  Wed, 06 Oct 2021 09:18:25 -0600
+
 contractor (0.13.0-1) focal; urgency=medium
 
   * setupzzard installs initial plugins now
