--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.15.0-1) focal; urgency=medium
+
+  * SetupWizard now accepts --contractor-hostname
+
+ -- Peter Howe <pnhowe@gmail.com>  Wed, 13 Oct 2021 07:45:06 -0600
+
 contractor (0.14.0-1) focal; urgency=medium
 
   * Cartographer work 
