--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.16.0-1) focal; urgency=medium
+
+  * NetworkInterface work
+
+ -- Peter Howe <pnhowe@gmail.com>  Fri, 12 Nov 2021 13:17:05 -0700
+
 contractor (0.15.1-1) focal; urgency=medium
 
   * SetupWizard now accepts --contractor-hostname
