--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+contractor (0.17.0-1) focal; urgency=medium
+
+  * Adding signalComplete, postMessage, siglanAlert support
+
+ -- Peter Howe <pnhowe@gmail.com>  Thu, 27 Jan 2022 14:49:57 -0700
+
 contractor (0.16.6-1) focal; urgency=medium
 
   * NetworkInterface work
